# ona_rust

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  test_api.sh
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  deploy.yml
.ona/: automations.yaml
infra/: AGENTS.md  cdk.json  package.json
infra/lib/: todo-server-stack.ts
src/: api_main.rs  auth.rs  category.rs  cli.rs  lib.rs  main.rs  storage.rs  todo.rs
src/api/: auth_handlers.rs  extractor.rs  mod.rs  state.rs  todo_handlers.rs
tests/: api_integration.rs  integration.rs
