[package]
name = "ona_rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
bcrypt = "0.15"

[dev-dependencies]
tempfile = "3"
